--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-                android:name=".NewAppActivity"
-                android:label="@string/title_activity_new_app"
-                android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".NewAppActivity">
         </activity>
     </application>
 
